[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-loop"
version = "0.1.0"
description = "CLI orchestrator that runs two Claude Code instances (planner + implementer) in a loop"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = []

[project.scripts]
claude-loop = "claude_loop:main"
